package NKikimrSharedCache;
option java_package = "ru.yandex.kikimr.proto";

enum TReplacementPolicy {
    ThreeLeveledLRU = 0;
    S3FIFO = 1;
    ClockPro = 2;
}

message TSharedCacheConfig {
    optional uint64 MemoryLimit = 1;
    optional uint64 ScanQueueInFlyLimit = 2 [default = 536870912];
    optional uint64 AsyncQueueInFlyLimit = 3 [default = 536870912];
    optional uint32 ActivePagesReservationPercent = 4 [default = 50];
    reserved 5;
    optional TReplacementPolicy ReplacementPolicy = 6 [default = S3FIFO];
    reserved 7;
}
